# InkMade

./: .env.example  .gitignore  README.md  config.yaml.example  pyproject.toml  requirements-provisioning.txt  requirements.txt
InkyCalendar/: README.md
companion/: README.md  build_executable.py  launcher.py  pyproject.toml  requirements.txt
companion/inkycal_companion/: __init__.py  __main__.py  ble_client.py  cli.py  discovery.py  google_oauth.py  gui.py  pi_client.py  protocol.py  workflow.py
desktop_app/: AGENTS.md  README.md  pubspec.yaml
desktop_app/installer/: inkycal_setup.iss
desktop_app/lib/: app.dart  main.dart
docs/: bluetooth_provisioning_gatt.md  flutter_setup_wizard.md
examples/flutter/: setup_wizard_state_machine.dart
scripts/: bootstrap.sh  deep_clean.sh  google_auth.py  install.sh  install_provisioning.sh  ota_update.sh  update.sh
src/inkycal/: buttons.py  calendar_google.py  calendar_icloud.py  config.py  display_inky.py  main.py  models.py  (+12 more)
systemd/: inkycal-buttons.service  inkycal-deepclean.service  inkycal-deepclean.timer  inkycal-provisioning.service  inkycal-update.service  inkycal-update.timer  inkycal.service  inkycal.timer
tests/: test_buttons.py  test_calendar_resilience.py  test_config_auto_update.py  test_config_buttons.py  test_config_weather.py  test_dedupe_events.py  test_google_oauth.py  test_main_view_mode.py  test_provisioning.py  test_provisioning_tokenstore.py  test_reminders_google.py  test_render_times.py  test_render_update_status.py  test_render_weekly.py  test_state.py  test_updates.py  test_weather.py
(+27 files in other folders)
